--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/auctions?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/auction?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
 spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 allowed.origin=http://localhost:3000
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
